# libsinter

./: .gitignore  LICENSE  README.md  default.nix  meson.build  setcap-build.sh  test.py
lib/: mount.c  mount.h  sinter.c  sinter.h  socket.c  socket.h
protocol/: README.md  TODO  constants.json  flagcomments.txt  flags.json  generate.sh  protocol-v7.31.json  protocol.json  subheaders.json
protocol/v7.31/: constants.json  flags.json  headers.json  opcodes.json  operations.json  structs.json
util/: sinter.c
